@@ -9,6 +9,7 @@ import org.synyx.urlaubsverwaltung.application.vacationtype.VacationCategory;
 import org.synyx.urlaubsverwaltung.application.vacationtype.VacationTypeEntity;
 import org.synyx.urlaubsverwaltung.application.vacationtype.VacationTypeService;
 import org.synyx.urlaubsverwaltung.application.vacationtype.VacationTypeServiceImpl;
+import org.synyx.urlaubsverwaltung.period.DayLength;
 import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.person.PersonService;
 
@@ -20,9 +21,7 @@ import java.util.List;
 import static java.time.ZoneOffset.UTC;
 import static java.time.temporal.TemporalAdjusters.firstDayOfMonth;
 import static java.time.temporal.TemporalAdjusters.lastDayOfMonth;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.synyx.urlaubsverwaltung.TestDataCreator.createApplication;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED_CANCELLATION_REQUESTED;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.CANCELLED;
@@ -62,18 +61,18 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate askedEndDate = LocalDate.now(UTC).with(lastDayOfMonth());
 
         // application for leave that should not be found
-        final Application appNotInPeriodBecausePast = createApplication(max, vacationType, askedStartDate.minusDays(12), askedStartDate.minusDays(10), FULL);
-        final Application appNotInPeriodBecauseFuture = createApplication(max, vacationType, askedEndDate.plusDays(10), askedEndDate.plusDays(12), FULL);
+        final ApplicationEntity appNotInPeriodBecausePast = applicationEntity(max, vacationType, askedStartDate.minusDays(12), askedStartDate.minusDays(10), FULL);
+        final ApplicationEntity appNotInPeriodBecauseFuture = applicationEntity(max, vacationType, askedEndDate.plusDays(10), askedEndDate.plusDays(12), FULL);
 
         sut.save(appNotInPeriodBecausePast);
         sut.save(appNotInPeriodBecauseFuture);
 
         // application for leave that should be found
-        final Application appStartingBeforePeriod = createApplication(max, vacationType, askedStartDate.minusDays(5), askedStartDate.plusDays(1), FULL);
-        final Application appEndingAfterPeriod = createApplication(max, vacationType, askedEndDate.minusDays(1), askedEndDate.plusDays(1), FULL);
-        final Application appInBetween = createApplication(max, vacationType, askedStartDate.plusDays(10), askedStartDate.plusDays(12), FULL);
-        final Application appStartingAtPeriod = createApplication(marlene, vacationType, askedStartDate, askedStartDate.plusDays(2), FULL);
-        final Application appEndingAtPeriod = createApplication(marlene, vacationType, askedEndDate.minusDays(5), askedEndDate, FULL);
+        final ApplicationEntity appStartingBeforePeriod = applicationEntity(max, vacationType, askedStartDate.minusDays(5), askedStartDate.plusDays(1), FULL);
+        final ApplicationEntity appEndingAfterPeriod = applicationEntity(max, vacationType, askedEndDate.minusDays(1), askedEndDate.plusDays(1), FULL);
+        final ApplicationEntity appInBetween = applicationEntity(max, vacationType, askedStartDate.plusDays(10), askedStartDate.plusDays(12), FULL);
+        final ApplicationEntity appStartingAtPeriod = applicationEntity(marlene, vacationType, askedStartDate, askedStartDate.plusDays(2), FULL);
+        final ApplicationEntity appEndingAtPeriod = applicationEntity(marlene, vacationType, askedEndDate.minusDays(5), askedEndDate, FULL);
 
         sut.save(appStartingBeforePeriod);
         sut.save(appEndingAfterPeriod);
@@ -84,7 +83,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         List<ApplicationStatus> statuses = List.of(WAITING);
         List<Person> persons = List.of(max, marlene);
 
-        final List<Application> actualApplications = sut.findByStatusInAndPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(statuses, persons, askedStartDate, askedEndDate);
+        final List<ApplicationEntity> actualApplications = sut.findByStatusInAndPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(statuses, persons, askedStartDate, askedEndDate);
 
         assertThat(actualApplications).contains(appStartingBeforePeriod, appEndingAfterPeriod, appInBetween, appStartingAtPeriod, appEndingAtPeriod);
     }
@@ -99,7 +98,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate askedEndDate = LocalDate.now(UTC).with(lastDayOfMonth());
 
         // application for leave that should be found
-        final Application application = createApplication(marlene, vacationType, askedStartDate, askedStartDate.plusDays(2), FULL);
+        final ApplicationEntity application = applicationEntity(marlene, vacationType, askedStartDate, askedStartDate.plusDays(2), FULL);
         application.setReason("\uD83C\uDF1E");
 
         sut.save(application);
@@ -107,7 +106,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         List<ApplicationStatus> statuses = List.of(WAITING);
         List<Person> persons = List.of(marlene);
 
-        final List<Application> actualApplications = sut.findByStatusInAndPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(statuses, persons, askedStartDate, askedEndDate);
+        final List<ApplicationEntity> actualApplications = sut.findByStatusInAndPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(statuses, persons, askedStartDate, askedEndDate);
 
         assertThat(actualApplications).contains(application);
     }
@@ -129,35 +128,35 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Allowed
-        Application fullDayOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayOvertimeReduction);
 
-        Application fullDayHoliday = createApplication(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayHoliday = applicationEntity(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
         fullDayHoliday.setStatus(ALLOWED);
         sut.save(fullDayHoliday);
 
         // Waiting
-        final Application halfDayOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Cancelled
-        final Application cancelledOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected
-        final Application rejectedOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
         // Revoked
-        final Application revokedOvertimeReduction = createApplication(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(ALLOWED), LocalDate.of(2020, 10, 3));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(ALLOWED), LocalDate.of(2020, 10, 3));
         assertThat(allowedApplications)
             .contains(fullDayOvertimeReduction, fullDayHoliday)
             .hasSize(2);
@@ -171,35 +170,35 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Allowed
-        Application fullDayOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayOvertimeReduction);
 
-        Application fullDayHoliday = createApplication(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayHoliday = applicationEntity(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
         fullDayHoliday.setStatus(ALLOWED);
         sut.save(fullDayHoliday);
 
         // Waiting
-        final Application halfDayOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Cancelled
-        final Application cancelledOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected
-        final Application rejectedOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
         // Revoked
-        final Application revokedOvertimeReduction = createApplication(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(ALLOWED, REJECTED), LocalDate.of(2020, 10, 3));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(ALLOWED, REJECTED), LocalDate.of(2020, 10, 3));
         assertThat(allowedApplications)
             .contains(fullDayOvertimeReduction, fullDayHoliday, rejectedOvertimeReduction)
             .hasSize(3);
@@ -213,11 +212,11 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Revoked
-        final Application revokedOvertimeReduction = createApplication(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(savedPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(), LocalDate.of(2020, 10, 3));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndEndDateGreaterThanEqual(List.of(), LocalDate.of(2020, 10, 3));
         assertThat(allowedApplications)
             .isEmpty();
     }
@@ -231,35 +230,35 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Allowed
-        Application fullDayOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayOvertimeReduction);
 
         // Waiting
-        final Application halfDayOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Cancelled
-        final Application cancelledOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected
-        Application rejectedHoliday = createApplication(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedHoliday = applicationEntity(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
         rejectedHoliday.setStatus(REJECTED);
         sut.save(rejectedHoliday);
 
-        final Application rejectedOvertimeReduction = createApplication(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
         // Revoked
-        final Application revokedOvertimeReduction = createApplication(savedOtherPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(savedOtherPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndPersonIn(List.of(ALLOWED, REJECTED), List.of(savedPerson, savedOtherPerson));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndPersonIn(List.of(ALLOWED, REJECTED), List.of(savedPerson, savedOtherPerson));
         assertThat(allowedApplications)
             .contains(rejectedHoliday, rejectedOvertimeReduction, fullDayOvertimeReduction)
             .hasSize(3);
@@ -274,35 +273,35 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Allowed
-        Application fullDayOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayOvertimeReduction);
 
         // Waiting
-        final Application halfDayOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Cancelled
-        final Application cancelledOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected
-        Application rejectedHoliday = createApplication(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedHoliday = applicationEntity(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
         rejectedHoliday.setStatus(REJECTED);
         sut.save(rejectedHoliday);
 
-        final Application rejectedOvertimeReduction = createApplication(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
         // Revoked
-        final Application revokedOvertimeReduction = createApplication(savedOtherPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(savedOtherPerson, getVacationType(UNPAIDLEAVE), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndPersonIn(List.of(ALLOWED, REJECTED), List.of(savedPerson));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndPersonIn(List.of(ALLOWED, REJECTED), List.of(savedPerson));
         assertThat(allowedApplications)
             .contains(rejectedHoliday, fullDayOvertimeReduction)
             .hasSize(2);
@@ -317,30 +316,30 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Allowed
-        Application fullDayOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayOvertimeReduction);
 
         // Waiting
-        final Application halfDayOvertimeReduction = createApplication(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(savedPerson, getVacationType(SPECIALLEAVE), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Cancelled
-        final Application cancelledOvertimeReduction = createApplication(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(savedPerson, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected
-        Application rejectedHoliday = createApplication(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedHoliday = applicationEntity(savedPerson, getVacationType(HOLIDAY), now, now.plusDays(2), FULL);
         rejectedHoliday.setStatus(REJECTED);
         sut.save(rejectedHoliday);
 
-        final Application rejectedOvertimeReduction = createApplication(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(savedOtherPerson, getVacationType(SPECIALLEAVE), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
-        final List<Application> allowedApplications = sut.findByStatusInAndPersonIn(List.of(REVOKED), List.of(savedPerson, savedOtherPerson));
+        final List<ApplicationEntity> allowedApplications = sut.findByStatusInAndPersonIn(List.of(REVOKED), List.of(savedPerson, savedOtherPerson));
         assertThat(allowedApplications)
             .isEmpty();
     }
@@ -354,49 +353,49 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate now = LocalDate.now(UTC);
 
         // Waiting overtime reduction (2.5 hours) ----------------------------------------------------------------------
-        final Application halfDayOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now.plusDays(5), now.plusDays(10), MORNING);
+        final ApplicationEntity halfDayOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now.plusDays(5), now.plusDays(10), MORNING);
         halfDayOvertimeReduction.setHours(Duration.ofMinutes(150));
         halfDayOvertimeReduction.setStatus(WAITING);
         sut.save(halfDayOvertimeReduction);
 
         // Temporary Allowed overtime reduction (8 hours) ------------------------------------------------------------------------
-        Application fullDayTemporaryAllowedOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayTemporaryAllowedOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayTemporaryAllowedOvertimeReduction.setHours(Duration.ofHours(8));
         fullDayTemporaryAllowedOvertimeReduction.setStatus(TEMPORARY_ALLOWED);
         sut.save(fullDayTemporaryAllowedOvertimeReduction);
 
         // Allowed overtime reduction (8 hours) ------------------------------------------------------------------------
-        Application fullDayAllowedOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayAllowedOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayAllowedOvertimeReduction.setHours(Duration.ofHours(8));
         fullDayAllowedOvertimeReduction.setStatus(ALLOWED);
         sut.save(fullDayAllowedOvertimeReduction);
 
         // Allowed overtime reduction (8 hours) ------------------------------------------------------------------------
-        Application fullDayAllowedCancellationRequestedOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity fullDayAllowedCancellationRequestedOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         fullDayAllowedCancellationRequestedOvertimeReduction.setHours(Duration.ofHours(8));
         fullDayAllowedCancellationRequestedOvertimeReduction.setStatus(ALLOWED_CANCELLATION_REQUESTED);
         sut.save(fullDayAllowedCancellationRequestedOvertimeReduction);
 
         // Cancelled overtime reduction (1 hour) ----------------------------------------------------------------------
-        final Application cancelledOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity cancelledOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         cancelledOvertimeReduction.setHours(Duration.ofHours(1));
         cancelledOvertimeReduction.setStatus(CANCELLED);
         sut.save(cancelledOvertimeReduction);
 
         // Rejected overtime reduction (1 hour) -----------------------------------------------------------------------
-        final Application rejectedOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity rejectedOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         rejectedOvertimeReduction.setHours(Duration.ofHours(1));
         rejectedOvertimeReduction.setStatus(REJECTED);
         sut.save(rejectedOvertimeReduction);
 
         // Revoked overtime reduction (1 hour) ------------------------------------------------------------------------
-        final Application revokedOvertimeReduction = createApplication(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
+        final ApplicationEntity revokedOvertimeReduction = applicationEntity(person, getVacationType(OVERTIME), now, now.plusDays(2), FULL);
         revokedOvertimeReduction.setHours(Duration.ofHours(1));
         revokedOvertimeReduction.setStatus(REVOKED);
         sut.save(revokedOvertimeReduction);
 
         // Holiday with hours set accidentally (1 hour) ---------------------------------------------------------------
-        final Application holiday = createApplication(person, getVacationType(HOLIDAY), now.minusDays(8), now.minusDays(4), FULL);
+        final ApplicationEntity holiday = applicationEntity(person, getVacationType(HOLIDAY), now.minusDays(8), now.minusDays(4), FULL);
 
         // NOTE: Holiday should not have hours set, but who knows....
         // More than once heard: "this should never happen" ;)
@@ -404,7 +403,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         sut.save(holiday);
 
         // Overtime reduction for other person -------------------------------------------------------------------------
-        final Application overtimeReduction = createApplication(otherPerson, getVacationType(OVERTIME), now.plusDays(5), now.plusDays(10), NOON);
+        final ApplicationEntity overtimeReduction = applicationEntity(otherPerson, getVacationType(OVERTIME), now.plusDays(5), now.plusDays(10), NOON);
         overtimeReduction.setHours(Duration.ofMinutes(150));
         sut.save(overtimeReduction);
 
@@ -426,13 +425,13 @@ class ApplicationRepositoryIT extends TestContainersBase {
         // correct
         final LocalDate from = LocalDate.of(2020, 5, 3);
         final LocalDate to = LocalDate.of(2020, 5, 10);
-        final Application waitingApplication = createApplication(person, getVacationType(OVERTIME), from, to, FULL);
+        final ApplicationEntity waitingApplication = applicationEntity(person, getVacationType(OVERTIME), from, to, FULL);
         waitingApplication.setHolidayReplacements(List.of(holidayReplacementEntity));
         waitingApplication.setStatus(WAITING);
         sut.save(waitingApplication);
 
         // other status
-        final Application allowedApplication = createApplication(person, getVacationType(OVERTIME), from, to, FULL);
+        final ApplicationEntity allowedApplication = applicationEntity(person, getVacationType(OVERTIME), from, to, FULL);
         allowedApplication.setHolidayReplacements(List.of(holidayReplacementEntity));
         allowedApplication.setStatus(ALLOWED);
         sut.save(allowedApplication);
@@ -440,7 +439,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         // other date
         final LocalDate otherStartDate = LocalDate.of(2020, 5, 3);
         final LocalDate otherEndDate = LocalDate.of(2020, 5, 4);
-        final Application wrongDateApplication = createApplication(person, getVacationType(OVERTIME), otherStartDate, otherEndDate, FULL);
+        final ApplicationEntity wrongDateApplication = applicationEntity(person, getVacationType(OVERTIME), otherStartDate, otherEndDate, FULL);
         wrongDateApplication.setHolidayReplacements(List.of(holidayReplacementEntity));
         wrongDateApplication.setStatus(WAITING);
         sut.save(wrongDateApplication);
@@ -449,14 +448,14 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final Person savedOtherHolidayReplacement = personService.create("other", "holiday", "other", "other@example.org");
         final HolidayReplacementEntity otherHolidayReplacementEntity = new HolidayReplacementEntity();
         otherHolidayReplacementEntity.setPerson(savedOtherHolidayReplacement);
-        final Application otherHolidayReplacementApplication = createApplication(person, getVacationType(OVERTIME), from, to, FULL);
+        final ApplicationEntity otherHolidayReplacementApplication = applicationEntity(person, getVacationType(OVERTIME), from, to, FULL);
         otherHolidayReplacementApplication.setHolidayReplacements(List.of(otherHolidayReplacementEntity));
         otherHolidayReplacementApplication.setStatus(WAITING);
         sut.save(otherHolidayReplacementApplication);
 
         final LocalDate requestDate = LocalDate.of(2020, 5, 5);
         final List<ApplicationStatus> requestStatus = List.of(WAITING);
-        final List<Application> applications = sut.findByHolidayReplacements_PersonAndEndDateIsGreaterThanEqualAndStatusIn(holidayReplacement, requestDate, requestStatus);
+        final List<ApplicationEntity> applications = sut.findByHolidayReplacements_PersonAndEndDateIsGreaterThanEqualAndStatusIn(holidayReplacement, requestDate, requestStatus);
         assertThat(applications).hasSize(1).contains(waitingApplication);
     }
 
@@ -467,45 +466,45 @@ class ApplicationRepositoryIT extends TestContainersBase {
 
         // yesterday
         final LocalDate yesterdayDates = LocalDate.of(2020, 5, 3);
-        final Application yesterdayApplication = createApplication(savedPerson, getVacationType(HOLIDAY), yesterdayDates, yesterdayDates, FULL);
+        final ApplicationEntity yesterdayApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), yesterdayDates, yesterdayDates, FULL);
         yesterdayApplication.setStatus(ALLOWED);
         sut.save(yesterdayApplication);
 
         // today
         final LocalDate todayDates = LocalDate.of(2020, 5, 4);
-        final Application todayApplication = createApplication(savedPerson, getVacationType(HOLIDAY), todayDates, todayDates, FULL);
+        final ApplicationEntity todayApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), todayDates, todayDates, FULL);
         todayApplication.setStatus(ALLOWED);
         sut.save(todayApplication);
 
         // tomorrow
         final LocalDate tomorrowAllowedDates = LocalDate.of(2020, 5, 5);
-        final Application tomorrowDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowDateApplication.setStatus(ALLOWED);
         sut.save(tomorrowDateApplication);
 
-        final Application tomorrowCancellationRequestDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowCancellationRequestDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowCancellationRequestDateApplication.setStatus(ALLOWED_CANCELLATION_REQUESTED);
         sut.save(tomorrowCancellationRequestDateApplication);
 
-        final Application tomorrowTemporaryAllowedDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowTemporaryAllowedDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowTemporaryAllowedDateApplication.setStatus(TEMPORARY_ALLOWED);
         sut.save(tomorrowTemporaryAllowedDateApplication);
 
-        final Application tomorrowWaitingDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowWaitingDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowWaitingDateApplication.setStatus(WAITING);
         sut.save(tomorrowWaitingDateApplication);
 
         // day after tomorrow
         final LocalDate dayAfterTomorrowAllowedDates = LocalDate.of(2020, 5, 6);
 
-        final Application dayAfterTomorrowDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), dayAfterTomorrowAllowedDates, dayAfterTomorrowAllowedDates, FULL);
+        final ApplicationEntity dayAfterTomorrowDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), dayAfterTomorrowAllowedDates, dayAfterTomorrowAllowedDates, FULL);
         dayAfterTomorrowDateApplication.setStatus(ALLOWED);
         sut.save(dayAfterTomorrowDateApplication);
 
         final LocalDate requestedStartDateFrom = LocalDate.of(2020, 5, 4);
         final LocalDate requestedStartDateTo = LocalDate.of(2020, 5, 5);
         final List<ApplicationStatus> requestStatuses = List.of(ALLOWED, ALLOWED_CANCELLATION_REQUESTED, TEMPORARY_ALLOWED);
-        final List<Application> applications = sut.findByStatusInAndStartDateBetweenAndUpcomingApplicationsReminderSendIsNull(requestStatuses, requestedStartDateFrom, requestedStartDateTo);
+        final List<ApplicationEntity> applications = sut.findByStatusInAndStartDateBetweenAndUpcomingApplicationsReminderSendIsNull(requestStatuses, requestedStartDateFrom, requestedStartDateTo);
         assertThat(applications)
             .containsOnly(todayApplication, tomorrowDateApplication, tomorrowCancellationRequestDateApplication, tomorrowTemporaryAllowedDateApplication);
     }
@@ -521,53 +520,53 @@ class ApplicationRepositoryIT extends TestContainersBase {
 
         // yesterday
         final LocalDate yesterdayDates = LocalDate.of(2020, 5, 3);
-        final Application yesterdayApplication = createApplication(savedPerson, getVacationType(HOLIDAY), yesterdayDates, yesterdayDates, FULL);
+        final ApplicationEntity yesterdayApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), yesterdayDates, yesterdayDates, FULL);
         yesterdayApplication.setHolidayReplacements(List.of(holidayReplacement));
         yesterdayApplication.setStatus(ALLOWED);
         sut.save(yesterdayApplication);
 
         // today
         final LocalDate todayDates = LocalDate.of(2020, 5, 4);
-        final Application todayApplication = createApplication(savedPerson, getVacationType(HOLIDAY), todayDates, todayDates, FULL);
+        final ApplicationEntity todayApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), todayDates, todayDates, FULL);
         todayApplication.setStatus(ALLOWED);
         sut.save(todayApplication);
 
         // tomorrow
         final LocalDate tomorrowAllowedDates = LocalDate.of(2020, 5, 5);
 
-        final Application tomorrowDateApplicationNoHolidayReplacement = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowDateApplicationNoHolidayReplacement = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowDateApplicationNoHolidayReplacement.setStatus(ALLOWED);
         sut.save(tomorrowDateApplicationNoHolidayReplacement);
 
-        final Application tomorrowDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowDateApplication.setHolidayReplacements(List.of(holidayReplacement));
         tomorrowDateApplication.setStatus(ALLOWED);
         sut.save(tomorrowDateApplication);
 
-        final Application tomorrowCancellationRequestDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowCancellationRequestDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowCancellationRequestDateApplication.setStatus(ALLOWED_CANCELLATION_REQUESTED);
         tomorrowCancellationRequestDateApplication.setHolidayReplacements(List.of(holidayReplacement));
         sut.save(tomorrowCancellationRequestDateApplication);
 
-        final Application tomorrowTemporaryAllowedDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowTemporaryAllowedDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowTemporaryAllowedDateApplication.setStatus(TEMPORARY_ALLOWED);
         tomorrowTemporaryAllowedDateApplication.setHolidayReplacements(List.of(holidayReplacement));
         sut.save(tomorrowTemporaryAllowedDateApplication);
 
-        final Application tomorrowDateApplicationAlreadySend = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowDateApplicationAlreadySend = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowDateApplicationAlreadySend.setStatus(TEMPORARY_ALLOWED);
         tomorrowDateApplicationAlreadySend.setHolidayReplacements(List.of(holidayReplacement));
         tomorrowDateApplicationAlreadySend.setUpcomingHolidayReplacementNotificationSend(tomorrowAllowedDates);
         sut.save(tomorrowDateApplicationAlreadySend);
 
-        final Application tomorrowWaitingDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
+        final ApplicationEntity tomorrowWaitingDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), tomorrowAllowedDates, tomorrowAllowedDates, FULL);
         tomorrowWaitingDateApplication.setStatus(WAITING);
         sut.save(tomorrowWaitingDateApplication);
 
         // day after tomorrow
         final LocalDate dayAfterTomorrowAllowedDates = LocalDate.of(2020, 5, 6);
 
-        final Application dayAfterTomorrowDateApplication = createApplication(savedPerson, getVacationType(HOLIDAY), dayAfterTomorrowAllowedDates, dayAfterTomorrowAllowedDates, FULL);
+        final ApplicationEntity dayAfterTomorrowDateApplication = applicationEntity(savedPerson, getVacationType(HOLIDAY), dayAfterTomorrowAllowedDates, dayAfterTomorrowAllowedDates, FULL);
         dayAfterTomorrowDateApplication.setHolidayReplacements(List.of(holidayReplacement));
         dayAfterTomorrowDateApplication.setStatus(ALLOWED);
         sut.save(dayAfterTomorrowDateApplication);
@@ -575,7 +574,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate requestedStartDateFrom = LocalDate.of(2020, 5, 4);
         final LocalDate requestedStartDateTo = LocalDate.of(2020, 5, 5);
         final List<ApplicationStatus> requestStatuses = List.of(ALLOWED, ALLOWED_CANCELLATION_REQUESTED, TEMPORARY_ALLOWED);
-        final List<Application> applications = sut.findByStatusInAndStartDateBetweenAndHolidayReplacementsIsNotEmptyAndUpcomingHolidayReplacementNotificationSendIsNull(requestStatuses, requestedStartDateFrom, requestedStartDateTo);
+        final List<ApplicationEntity> applications = sut.findByStatusInAndStartDateBetweenAndHolidayReplacementsIsNotEmptyAndUpcomingHolidayReplacementNotificationSendIsNull(requestStatuses, requestedStartDateFrom, requestedStartDateTo);
         assertThat(applications)
             .containsOnly(tomorrowDateApplication, tomorrowCancellationRequestDateApplication, tomorrowTemporaryAllowedDateApplication);
     }
@@ -591,23 +590,23 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate askedEndDate = LocalDate.now(UTC).with(lastDayOfMonth());
 
         // application for leave that should not be found
-        final Application appWrongVacationType = createApplication(marlene, getVacationType(HOLIDAY), askedStartDate.plusDays(1), askedEndDate.minusDays(1), FULL);
+        final ApplicationEntity appWrongVacationType = applicationEntity(marlene, getVacationType(HOLIDAY), askedStartDate.plusDays(1), askedEndDate.minusDays(1), FULL);
         sut.save(appWrongVacationType);
 
-        final Application appWrongPerson = createApplication(max, overtime, askedStartDate.plusDays(1), askedEndDate.minusDays(1), FULL);
+        final ApplicationEntity appWrongPerson = applicationEntity(max, overtime, askedStartDate.plusDays(1), askedEndDate.minusDays(1), FULL);
         sut.save(appWrongPerson);
 
-        final Application appWrongStatus = createApplication(marlene, overtime, askedStartDate.plusDays(1), askedEndDate.plusDays(1), FULL);
+        final ApplicationEntity appWrongStatus = applicationEntity(marlene, overtime, askedStartDate.plusDays(1), askedEndDate.plusDays(1), FULL);
         appWrongStatus.setStatus(CANCELLED);
         sut.save(appWrongStatus);
 
 
         // application for leave that should be found
-        final Application appStartBeforeAsked = createApplication(marlene, overtime, askedStartDate.minusDays(1), askedEndDate.minusDays(1), FULL);
-        final Application appEndAfterAsked = createApplication(marlene, overtime, askedStartDate.plusDays(1), askedEndDate.plusDays(1), FULL);
-        final Application appInBetween = createApplication(marlene, overtime, askedStartDate.plusDays(10), askedStartDate.plusDays(12), FULL);
-        final Application appStartingAtPeriod = createApplication(marlene, overtime, askedStartDate, askedStartDate.plusDays(2), FULL);
-        final Application appEndingAtPeriod = createApplication(marlene, overtime, askedEndDate.minusDays(5), askedEndDate, FULL);
+        final ApplicationEntity appStartBeforeAsked = applicationEntity(marlene, overtime, askedStartDate.minusDays(1), askedEndDate.minusDays(1), FULL);
+        final ApplicationEntity appEndAfterAsked = applicationEntity(marlene, overtime, askedStartDate.plusDays(1), askedEndDate.plusDays(1), FULL);
+        final ApplicationEntity appInBetween = applicationEntity(marlene, overtime, askedStartDate.plusDays(10), askedStartDate.plusDays(12), FULL);
+        final ApplicationEntity appStartingAtPeriod = applicationEntity(marlene, overtime, askedStartDate, askedStartDate.plusDays(2), FULL);
+        final ApplicationEntity appEndingAtPeriod = applicationEntity(marlene, overtime, askedEndDate.minusDays(5), askedEndDate, FULL);
 
         sut.save(appStartBeforeAsked);
         sut.save(appEndAfterAsked);
@@ -617,7 +616,7 @@ class ApplicationRepositoryIT extends TestContainersBase {
 
         final List<ApplicationStatus> statuses = List.of(WAITING);
 
-        final List<Application> actualApplications = sut.findByStatusInAndPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqualAndVacationTypeCategory(statuses, marlene, askedStartDate, askedEndDate, OVERTIME);
+        final List<ApplicationEntity> actualApplications = sut.findByStatusInAndPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqualAndVacationTypeCategory(statuses, marlene, askedStartDate, askedEndDate, OVERTIME);
         assertThat(actualApplications).containsOnly(appStartBeforeAsked, appEndAfterAsked, appInBetween, appStartingAtPeriod, appEndingAtPeriod);
     }
 
@@ -630,19 +629,19 @@ class ApplicationRepositoryIT extends TestContainersBase {
         final LocalDate askedStartDate = LocalDate.now(UTC).with(firstDayOfMonth());
         final LocalDate askedEndDate = LocalDate.now(UTC).with(lastDayOfMonth());
 
-        final Application validHolidayStartingBefore = createApplication(marlene, getVacationType(HOLIDAY), askedStartDate.minusDays(1), askedStartDate.plusDays(1), FULL);
+        final ApplicationEntity validHolidayStartingBefore = applicationEntity(marlene, getVacationType(HOLIDAY), askedStartDate.minusDays(1), askedStartDate.plusDays(1), FULL);
         sut.save(validHolidayStartingBefore);
 
-        final Application validOvertimeEndingAfter = createApplication(marlene, getVacationType(OVERTIME), askedEndDate.minusDays(1), askedEndDate.plusDays(1), FULL);
+        final ApplicationEntity validOvertimeEndingAfter = applicationEntity(marlene, getVacationType(OVERTIME), askedEndDate.minusDays(1), askedEndDate.plusDays(1), FULL);
         sut.save(validOvertimeEndingAfter);
 
-        final Application validSpecialLeaveInBetween = createApplication(marlene, getVacationType(SPECIALLEAVE), askedStartDate.plusDays(2), askedEndDate.minusDays(2), FULL);
+        final ApplicationEntity validSpecialLeaveInBetween = applicationEntity(marlene, getVacationType(SPECIALLEAVE), askedStartDate.plusDays(2), askedEndDate.minusDays(2), FULL);
         sut.save(validSpecialLeaveInBetween);
 
-        final Application invalidApplication = createApplication(max, getVacationType(HOLIDAY), askedStartDate.plusDays(2), askedEndDate.minusDays(2), FULL);
+        final ApplicationEntity invalidApplication = applicationEntity(max, getVacationType(HOLIDAY), askedStartDate.plusDays(2), askedEndDate.minusDays(2), FULL);
         sut.save(invalidApplication);
 
-        final List<Application> actual = sut.findByPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqualAndStatusIn(List.of(marlene), askedStartDate, askedEndDate, List.of(WAITING));
+        final List<ApplicationEntity> actual = sut.findByPersonInAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqualAndStatusIn(List.of(marlene), askedStartDate, askedEndDate, List.of(WAITING));
 
         assertThat(actual).containsExactlyInAnyOrder(validHolidayStartingBefore, validOvertimeEndingAfter, validSpecialLeaveInBetween);
     }
@@ -652,20 +651,23 @@ class ApplicationRepositoryIT extends TestContainersBase {
 
         final Person person = personService.create("muster", "Max", "Mustermann", "mustermann@example.org");
 
-        Application application = new Application();
         final HolidayReplacementEntity holidayReplacement = new HolidayReplacementEntity();
         holidayReplacement.setPerson(person);
+
+        final ApplicationEntity application = new ApplicationEntity();
         application.setHolidayReplacements(List.of(holidayReplacement));
+
         sut.save(application);
 
-        final List<Application> applicationsByHolidayReplacement = sut.findAllByHolidayReplacements_Person(person);
+        final List<ApplicationEntity> applicationsByHolidayReplacement = sut.findAllByHolidayReplacements_Person(person);
+
         assertThat(applicationsByHolidayReplacement).contains(application);
     }
 
     private VacationTypeEntity getVacationType(VacationCategory category) {
         final List<VacationTypeEntity> vacationTypeEntities = vacationTypeService.getAllVacationTypes().stream()
             .map(VacationTypeServiceImpl::convert)
-            .collect(toList());
+            .toList();
 
         for (VacationTypeEntity vacationType : vacationTypeEntities) {
             if (vacationType.isOfCategory(category)) {
@@ -674,5 +676,18 @@ class ApplicationRepositoryIT extends TestContainersBase {
         }
 
         throw new IllegalStateException("No type with found with category: " + category.name());
+    }
+
+    public static ApplicationEntity applicationEntity(Person person, VacationTypeEntity vacationType,
+                                                      LocalDate startDate, LocalDate endDate, DayLength dayLength) {
+
+        final ApplicationEntity entity = new ApplicationEntity();
+        entity.setPerson(person);
+        entity.setStartDate(startDate);
+        entity.setEndDate(endDate);
+        entity.setDayLength(dayLength);
+        entity.setVacationType(vacationType);
+        entity.setStatus(ApplicationStatus.WAITING);
+        return entity;
     }
 }
